# kaldr1

./: .env.example  .gitignore  .nfs000000000633181b0000a936  .nycrc.json  BACKUP_RECOVERY.md  BLOCKCHAIN_TEST_DRIVE_SUMMARY.md  CHANGELOG.md  CI_CD_IMPLEMENTATION_COMPLETE.md  COMPLETE_FILE_LIST.md  COMPREHENSIVE_TEST_SUITE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  DAG_ENGINE_IMPLEMENTATION_SUMMARY.md  Dockerfile.frontend  FINAL_PUSH_CONFIRMATION.md  FINAL_STATUS_REPORT.md  FRONTEND_BACKEND_INTEGRATION.md  FUTURE_ROADMAP_README.md  GITHUB_PUSH_SUMMARY.md  IDENTITY_ROTATION.md  IMPLEMENTATION_SUMMARY.md  KALDRIX_SDK_SYSTEM_READY.md  KALDRIX_Whitepaper.md  LICENSE  METRICS.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  PUBLIC_TESTNET_INVITATION.md  PUBLIC_TESTNET_LAUNCH_SUMMARY.md  PUSH_COMPLETION_SUMMARY.md  PUSH_STATUS_REPORT.md  PUSH_SUCCESS_REPORT.md  PUSH_SUMMARY.md  QUANTUM_DAG_BLOCKCHAIN_SUMMARY.md  README.md  RESUME_GUIDE.md  SDK_GENERATION_SUMMARY.md  SECURITY_BOUNTY.md  SESSION_RESUME_GUIDE.md  (+83 more)
benchmarks/: comprehensive-test.ts  performance-test.ts
blockchain-backend/: Dockerfile
blockchain-frontend/: Dockerfile
config/: genesis-mainnet.json  network.json  node-1.json  node-2.json  node-3.json  production.env
contracts/: NFTBridge.sol  TokenBridge.sol
db/: custom.db
deploy/: production-deploy.sh
deployment/: app-store-deployment-guide.md  deploy.sh  deployment-checklist.md
docs/: API.md  DEVELOPER_GUIDE.md  INSTALLATION.md  WEBSOCKET.md  backup-recovery-plan.md  developer-documentation.md  developer-handoff-brief.md  development-setup.md  governance-layer.md  investor-information.md  mainnet-deployment.md  mainnet-launch-criteria.md  mobile-sdk-design.md  operations-handoff.md  production-deployment-guide.md  production-launch-checklist.md  public-release-notes.md  security-assessment.md  validator-onboarding.md
k8s/: kaldrix-deployment.yaml  monitoring.yaml  zero-downtime-deployment.yaml
legacy-tests/: blockchain-service.test.ts  incentive-service.test.ts  parallel-processing-service.test.ts  setup.ts  socket.test.ts  tokenomics.test.ts
loki/: loki.yml
marketing/: brand-guidelines.md  launch-marketing-materials.md  launch-timeline.md  social-media-calendar.md
mobile-sdk/: ARCHITECTURE.md  Cargo.toml  README.md
mobile-sdk/android/: build.gradle
mobile-sdk/android/app/: build.gradle
mobile-sdk/android/app/src/main/: AndroidManifest.xml
mobile-sdk/android/app/src/main/java/com/kaldrix/wallet/: KaldrixWalletApplication.kt  MainActivity.kt
mobile-sdk/ios/KaldrixWallet/: BiometricManager.swift  ContentView.swift  KaldrixWalletApp.swift  NetworkManager.swift  NotificationManager.swift  QRCodeGenerator.swift  ReceiveView.swift  SecurityManager.swift  SendView.swift  SettingsView.swift  TransactionView.swift  Utils.swift  WalletManager.swift  WalletView.swift
mobile-sdk/ios/KaldrixWallet.xcodeproj/: project.pbxproj
mobile-sdk/src/: client.rs  crypto.rs  lib.rs  network.rs  storage.rs  types.rs  utils.rs  wallet.rs
monitoring/: README.md  alert_rules.yml  alertmanager.yml  alerts.yml  main.tf  outputs.tf  prometheus.yml  provider.tf  regional-monitoring.json  variables.tf
press-releases/: community-launch-announcement.md  kaldrix-mainnet-launch-press-release.md  kaldrix-press-kit.md
prisma/: schema.prisma
public-node-kit/: .env.example  ENGAGEMENT-KIT.md  QuickStart.md  README.md  docker-compose.yml  start-node.js  start-node.sh
public-reports/: executive-summary.md  phase5-final-implementation-report.md  validation-report.html  validation-report.md
reports/: fix-plan.md  phase5-verification.html  phase5-verification.md
scripts/: README-TEST-DRIVE.md  README.md  analyze-test-drive.sh  bootstrap-mainnet.sh  common-test-utils.sh  convert-pilot-to-loi.sh  deploy-production.sh  deploy-staging.sh  deploy-testnet.sh  dev-compose.sh  economic-validation.sh  execute-mainnet-bootstrap-simulated.sh  execute-mainnet-bootstrap.sh  health-check.sh  init-db.sql  kaldrix-test-drive.bat  kaldrix-test-drive.sh  load-test.sh  penetration-test.sh  post-bootstrap-validation.sh  run-integration-tests.sh  security-audit.sh  setup-dns.sh  setup-letsencrypt.sh  setup-tls.sh  stop-testnet.sh  stress-test.sh  test-adversarial.sh  test-bridge.sh  test-fees.sh  test-governance.sh  test-native-token.sh  test-parallel-processing.sh  test-performance.sh  test-staking-rewards.sh  transaction-broadcaster.sh  websocket-benchmark.ts  zero-downtime-deploy.sh
sdk/: ADDING_NEW_LANGUAGES.md  NEW_LANGUAGE_TEMPLATE.md  README.md
sdk/rust-client/: Cargo.toml  README.md  build.rs
sdk/rust-client/src/: lib.rs  models.rs
sdk/rust-client/tests/: integration.rs
src/: lib.rs
status/: perf_report.json  weekly-status.md
terraform/: data.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
testing/: README.md  ci-cd-config.yml  run-tests.sh
tests/: README.md  setup.ts  simple.test.ts  (+5 more)
(+498 files in other folders)
