[package]
name = "quantum-proof-dag-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Quantum DAG Team"]
description = "A quantum-proof DAG-based blockchain implementation"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha3 = "0.10"
hex = "0.4"

# Cryptography
ed25519-dalek = "1.0"
x25519-dalek = "1.0"
curve25519-dalek = "3.2"

# Post-Quantum Cryptography (simplified for prototype)
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.4"

# Networking
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Database
rocksdb = "0.19"
bincode = "1.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Logging and error handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.3", features = ["derive"] }

# HTTP API server
warp = "0.3"
tower-http = { version = "0.4", features = ["cors"] }
tokio-tungstenite = "0.20"

# Monitoring and metrics
prometheus = "0.13"
lazy_static = "1.4"
sys-info = "0.9"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
criterion = "0.5"

[[bin]]
name = "dag-node"
path = "src/bin/node.rs"

[[bin]]
name = "dag-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "quantum_dag"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true