[package]
name = "quantum-dag-mobile-sdk"
version = "0.1.0"
edition = "2021"
description = "Mobile SDK for Quantum DAG Blockchain"
authors = ["Quantum DAG Team"]
license = "MIT"
repository = "https://github.com/quantum-dag/mobile-sdk"
homepage = "https://quantum-dag.com"
readme = "README.md"

[lib]
name = "quantum_dag_mobile_sdk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
aes = "0.8"
ctr = "0.9"
rand = "0.8"
bip39 = "2.0"
hex = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.13"

# File system
tokio-fs = "0.1"
dirs = "5.0"
tempfile = "3.0"

# Compression
zip = "0.6"

# Network utilities
local-ip-address = "0.5"
pnet = "0.33"
surge-ping = "0.8"
sysinfo = "0.29"
whois-rust = "1.5"
openssl = "0.10"

# Regular expressions
regex = "1.0"

# Utilities
once_cell = "1.0"
lazy_static = "1.0"

# Mobile-specific (optional features)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-glue = "0.7"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa = "0.24"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
criterion = "0.5"

[features]
default = ["full"]
full = ["all-features"]
all-features = ["encryption", "caching", "logging", "backup"]
encryption = []
caching = []
logging = []
backup = []
android = []
ios = []
wasm = []

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]